Add env vars for disabling analytics, its caching, and setting the cache TLL

--- a/.env.example
+++ b/.env.example
@@ -78,3 +78,7 @@ CROWDIN_DEVELOPER_ID=
 TOP_GG_TOKEN=
 DISCORD_BOT_LIST_TOKEN=
 DISCORD_BOT_LIST_BOT_ID=
+
+ANALYTICS_ENABLED=true
+ANALYTICS_CACHE_ENABLED=true
+ANALYTICS_CACHE_TTL_MINUTES=10
