--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
     "laravel/sail": "^1.18",
     "mockery/mockery": "^1.4.4",
     "nunomaduro/collision": "^8.1",
-    "phpunit/phpunit": "^12.4",
+    "pestphp/pest": "^4.3",
     "roave/security-advisories": "dev-latest",
     "spatie/laravel-ignition": "^2.0",
     "timwassenburg/laravel-service-generator": "^1.0"
