--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ concurrency:
 
 jobs:
   lint-and-test:
-    name: 'Building, Linting and Unit Tests'
+    name: 'Building, Linting and Tests'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -16,7 +16,7 @@ jobs:
       - uses: php-actions/composer@v6
         with:
           php_version: "8.5"
-          php_extensions: bcmath intl pcntl
+          php_extensions: bcmath intl pcntl pdo_pgsql
           version: 2.x
           working_dir: "/tmp/composer-working-dir"
         env:
@@ -28,6 +28,11 @@ jobs:
         with:
           path: /tmp/composer-cache
           key: ${{ runner.os }}-${{ hashFiles('**/composer.lock') }}
+
+      - name: Start built-in PostgreSQL
+        run: |
+          sudo systemctl start postgresql.service
+          sudo systemctl status postgresql.service
 
       - name: Setup Node.js
         uses: actions/setup-node@v2
@@ -55,4 +60,22 @@ jobs:
 
       - run: npm run build
 
-      - run: php artisan test
+      - name: Prepare .env
+        run: |
+          cp .env.example .env
+          # Configure Laravel to use built-in PostgreSQL
+          sed -i 's/DB_CONNECTION=.*/DB_CONNECTION=pgsql/' .env
+          sed -i 's/DB_HOST=.*/DB_HOST=127.0.0.1/' .env
+          sed -i 's/DB_PORT=.*/DB_PORT=5432/' .env
+          sed -i 's/DB_DATABASE=.*/DB_DATABASE=postgres/' .env
+          sed -i 's/DB_USERNAME=.*/DB_USERNAME=postgres/' .env
+          sed -i 's/DB_PASSWORD=.*/DB_PASSWORD=/' .env
+
+      - name: Generate app key
+        run: php artisan key:generate
+
+      - name: Run migrations
+        run: php artisan migrate --force
+
+      - name: Run tests
+        run: php artisan test
