--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Create Composer working directory
+        run: mkdir -p /tmp/composer-working-dir
+
       - uses: php-actions/composer@v6
         with:
           php_version: "8.5"
