--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,15 +13,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Create Composer working directory
-        run: mkdir -p /tmp/composer-working-dir
-
       - uses: php-actions/composer@v6
         with:
           php_version: "8.5"
           php_extensions: bcmath intl pcntl pdo_pgsql
           version: 2.x
-          working_dir: "/tmp/composer-working-dir"
+          working_dir: "/tmp"
         env:
           CROWDIN_PROJECT_ID: ${{ vars.CROWDIN_PROJECT_ID }}
           CROWDIN_PROJECT_IDENTIFIER: ${{ vars.CROWDIN_PROJECT_IDENTIFIER }}
