--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: vendor
-          key: composer-${{ runner.os }}-${{ hashFiles('**/composer.lock') }}
+          key: composer-${{ runner.os }}-${{ hashFiles('composer.lock') }}
 
       - name: Install Composer dependencies
         run: composer install --no-interaction --prefer-dist
